<resources>
    <string name="app_name">City App</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">We will help you to find your way! </string>
    <string name="powered_by">Glains</string>

    <!--Strings for Dashboard-->
    <!--Categories-->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="airports">Airports</string>
    <string name="banks">Banks</string>
    <string name="education">Education</string>

    <!--Title and Descriptions-->
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_descriptions">All the Locations that are featured and have the top demand in town</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>
    <string name="login">LOGIN</string>
    <string name="profile">PROFILE</string>
    <string name="logout">LOG OUT</string>
    <string name="share">SHARE</string>
    <string name="rate_us">RATE US</string>
    <string name="expand_all">EXPAND ALL</string>
    <string name="hospitals">HOSPITALS</string>
    <string name="enter_username">Enter Username</string>

    <!--General strings-->
    <string name="sine_up">Sign Up</string>
    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="retailer_tag_line">we will help you to grow your business using online services!</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How we work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_full_name">Full Name</string>
    <string name="enter_email">Email</string>
    <string name="enter_phone_number">Phone Number</string>


    <!--title-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>
    <string name="car_rent">Car Rent</string>

    <!--description-->
    <string name="first_slide_decs">You can search any palces in this city and we are providing result accordingly</string>
    <string name="second_slide_decs">We provode all most all the number of all department and shops registered with us </string>
    <string name="third_slide_decs">If you have a shop or sometings and if you want to be a part of our growing industry then add you place</string>
    <string name="fourth_slide_decs">We will handle every thing for you As you have the app in your pocket then you don\'t need to worry</string>


    <!--buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Let Get Started</string>


</resources>