<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.SignUp3rdClass">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Common.LoginSignup.SignUp2ndClass">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Common.LoginSignup.SignUp"
            android:background="@color/colorPrimary"
            android:padding="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/signup_back_button"
                    android:layout_width="55dp"
                    android:transitionName="transition_back_arrow_btn"

                    android:layout_height="30dp"
                    android:padding="5dp"
                    android:src="@drawable/general_back_icon" />

                <TextView
                    android:id="@+id/signup_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:textSize="40sp"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:fontFamily="@font/bevan"
                    android:layout_marginTop="20dp"

                    android:transitionName="transition_title_text"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="40dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_phone_number"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:startIconTint="@color/black"
                        app:hintTextColor="@color/black"
                        android:textColorHint="@color/black"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/black"
                        app:boxStrokeWidthFocused="2dp"
                        app:boxStrokeColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="phone"
                            android:backgroundTint="#00000000"/>

                    </com.google.android.material.textfield.TextInputLayout>



                </LinearLayout>

                <Button
                    android:id="@+id/signup_next_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/next_btn"
                    android:backgroundTint="@color/black"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white"
                    android:onClick="callNextSignup3Screen"
                    android:transitionName="transition_next_btn"
                    android:elevation="5dp"/>

                <Button
                    android:id="@+id/signup_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/black"
                    android:elevation="5dp"
                    android:fontFamily="@font/muli_light_italic"
                    android:text="@string/login"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColor="@color/black"
                    android:transitionName="transition_login_btn"/>


            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>